--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "angular": "^1.7.5",
     "cordova-plugin-advanced-http": "2.0.1",
+    "cordova-sqlite-storage": "2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngx-mask": "^6.4.14",
@@ -44,7 +45,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
