--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "^2.2.0",
     "angular": "^1.7.5",
+    "angularfire2": "^5.1.0",
     "cordova-plugin-advanced-http": "2.0.1",
     "cordova-sqlite-storage": "2.4.0",
+    "firebase": "^5.5.5",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngx-mask": "^6.4.14",
