--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
@@ -29,7 +30,7 @@
     "angularfire2": "^5.1.0",
     "cordova-plugin-advanced-http": "2.0.1",
     "cordova-sqlite-storage": "2.4.0",
-    "firebase": "^5.5.5",
+    "firebase": "^5.5.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngx-mask": "^6.4.14",
