--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "angular": "^1.7.5",
     "angularfire2": "^5.1.0",
     "cordova-plugin-advanced-http": "2.0.1",
-    "cordova-sqlite-storage": "2.4.0",
+    "cordova-sqlite-storage": "^2.4.0",
     "firebase": "^5.5.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
