--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
+    "@ionic-native/sqlite": "^4.16.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "^2.2.0",
     "angular": "^1.7.5",
